# queen

./: .gitmodules  Cargo.toml  README.md  rust-toolchain
kernal/: Cargo.toml
kernel/: .env  Cargo.toml  Makefile  justfile  release.gdb  virt.dtb
kernel/src/: backtrace.rs  consts.rs  lang.rs  lib.rs  logging.rs  main.rs  memory.rs  panic_wait.rs  print.rs  utils.rs
kernel/src/arch/aarch64/: consts.rs  cpu.rs  memory.rs  mod.rs  paging.rs  signal.rs  timer.rs
kernel/src/arch/aarch64/boot/: entry.S  link.ld  mod.rs
kernel/src/arch/aarch64/bsp/virt/: mod.rs  timer.rs  uart.rs  virt.dts  virt2.dts
kernel/src/arch/aarch64/interrupt/: consts.rs  handler.rs  mod.rs
kernel/src/drivers/: common.rs  device_tree.rs  mod.rs
kernel/src/drivers/gpio/: mod.rs  pl061.rs
kernel/src/drivers/irq/: mod.rs
kernel/src/drivers/irq/gicv2/: gicc.rs  gicd.rs  mod.rs  v2m.rs
kernel/src/drivers/irq/gicv3/: gicd.rs  gicr.rs  mod.rs
kernel/src/drivers/rtc/: mod.rs  pl031.rs
kernel/src/drivers/serial/: mod.rs  pl011_uart.rs
kernel/src/drivers/timer/: mod.rs
kernel/src/fs/: file.rs  mod.rs
kernel/src/fs/devfs/: mod.rs  tty.rs
kernel/src/memory/: memory_set.rs  mod.rs  paging.rs
kernel/src/memory/handler/: byframe.rs  delay.rs  file.rs  linear.rs  mod.rs
kernel/src/process/: abi.rs  mod.rs  structs.rs  thread.rs
kernel/src/signal/: action.rs  mod.rs
kernel/src/sync/: event_bus.rs  mod.rs  spin.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs  time.rs
kernel/src/task/: executor.rs  executors.rs  future.rs  mod.rs  timer.rs
kernel/src/task/executor/: features.rs  mod.rs
