[package]
name = "queen-core"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bsp_virt"]
# QEMU virt board for aarch64
bsp_virt = []

[dependencies]
aarch64 = { path = "../aarch64" }
log = "0.4"
spin = "0.7"