[package]
name = "queen-core"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bsp_virt"]
# QEMU virt board for aarch64
bsp_virt = []

[dependencies]
aarch64 = { path = "../aarch64" }
allocators = { path = "../allocators" }
queen-fs = { path = "../fs" }
queen-syscall = { path = "../syscall" }
log = "0.4"
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "spin_mutex",
    "rwlock",
    "once",
    "lazy",
] }
fdt-rs = { version = "0.4.3", default-features = false }
num_enum = { version = "0.5", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
async-task = { version = "4.0", default-features = false }
priority-queue = "1.1"
ahash = { version = "0.7", default-features = false }
bitflags = "1.2"
vec-arena = "1.1"
smallvec = "1.6"
xmas-elf = "0.8"
tock-registers = "0.7"
